      - [ ] Port https://github.com/yarpc/yarpc-go/pull/1482/files into spring.
- [ ] Port / re-create Protobuf encoding
      - [x] Rewrite the protoc-gen-yarpc-go plugin.
      - [ ] Add end-to-end test that uses gRPC transport with protobuf encoding.
      - [ ] Explore threading the context in Protobuf code generation, i.e. in `Stream.Receive`.

Transports:
- [ ] Port TChannel transport
- [x] Port or recreate gRPC transport
- [ ] use `req` and `res` as variable names for consistency.
      - [x] HTTP
      - [ ] TChannel
      - [x] gRPC

Peer Lists:
- [x] Port abstract peer list to v2/yarpcpeerlist
- [ ] Port yarpcroundrobin
- [x] Port yarpcrandpeer
- [ ] Port yarpcchoiceoftwo
- [ ] Port yarpcfewestpending
- [ ] Port yarpchashring32

To port peer lists forward:
- [ ] Replace functional options with options struct pattern, like net in the
      go standard library and the v2/yarpchttp example.
- [ ] Remove lifecycle.
- [ ] Drop Config and Spec, recreate in yarpcfx.
- [ ] clean up yarpctest namespace (including removing StartAction/StopAction)

To port transports forward:
- [ ] Rename Transport to Dialer, implementing yarpc.Dialer.
- [ ] Decouple Inbound and Outbound from Transport. The Dialer gives outbounds
      access to the underlying transport if that's needed to convey disconnect
      messages back.  Inbounds have no need for the dialer.
- [ ] Remove lifecycle.
- [ ] Inbounds should have Addr and Listener properties, favoring the open Listener if given.
- [ ] Outbounds should have URL/Addr, Dialer, and Chooser properties, favoring the Chooser if given.
- [ ] NewSingleOutbound should be removed in favor of Outbound{Dialer, Addr or URL} as an alternative
      to providing a chooser.
- [ ] Start/Stop must accept context, return error.
- [ ] Replace functional options with options struct pattern, like net in the
      go standard library and the v2/yarpchttp example.
- [ ] Transports() method is no longer required.